--- a/demo/src/main/resources/templates/blocks/header.html
+++ b/demo/src/main/resources/templates/blocks/header.html
@@ -6,7 +6,7 @@
             <a class="p-2 text-dark" href="/task">Tasks</a>
             <a class="p-2 text-dark" href="/task/add">Add New Task</a>
             <a class="p-2 text-dark" href="/projects">Projects</a>
-            <a class="p-2 text-dark" href="/users">Users</a>
+            <a class="p-2 text-dark" href="/user">Users</a>
         </nav>
         <a class="btn btn-outline-primary" href="/login">Sign up</a>
         <h3 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h3>
