--- a/demo/src/main/resources/templates/task-main.html
+++ b/demo/src/main/resources/templates/task-main.html
@@ -13,8 +13,9 @@
         <h3 th:text="${el.title}"/>
         <strong>Type</strong><p th:text="${el.type}"/>
         <strong>Priority</strong><p th:text="${el.priority}"/>
-        <strong>Author of code </strong><p th:text="${el.authorName}"/>
-        <a th:href="'/blog/' + ${el.id}">Details</a>
+        <strong>Project</strong><p th:text="${el.project}"/>
+        <strong>Author of Task </strong><p th:text="${el.authorName}"/>
+        <a th:href="'/task/' + ${el.id}">Details</a>
     </div>
 </div>
 <div th:insert="blocks/footer :: footer"></div>
