--- a/demo/src/main/resources/templates/task-details.html
+++ b/demo/src/main/resources/templates/task-details.html
@@ -1,21 +1,26 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:text="${title}"/>
+    <title th:text="${task}"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container mt-5">
-    <h1>Блог Сайта</h1>
+    <h1>Task Details</h1>
     <div th:each="el : ${task}" class="alert alert-info mt-2">
         <h3 th:text="${el.title}"/>
-        <p th:text="${el.full_text}"/>
-        <p><b>Просмотры: </b><span th:text="${el.views}"/></p>
-        <a th:href="'/task/' + ${el.id} + '/edit'" class="btn btn-warning">Редактировать</a><br><br>
+        <strong>Type of Task: </strong><a th:text="${el.type}"/><br>
+        <strong>Project of Task: </strong><a th:text="${el.project}"/><br>
+        <strong>Rriority of Task: </strong><a th:text="${el.priority}"/><br>
+        <strong>Author of Task: </strong><a th:text="${el.authorName}"/><br>
+        <strong>Description: </strong><textarea th:placeholder="${el.description}" class="form-control"></textarea><br>
+
+
+        <a th:href="'/task/' + ${el.id} + '/edit'" class="btn btn-warning">Edit Task</a><br><br>
         <form th:action="'/task/' + ${el.id} + '/remove'" method="post">
-            <button type="submit" class="btn btn-warning">Удалить</button>
+            <button type="submit" class="btn btn-warning">Delete</button>
         </form>
     </div>
 </div>
