--- a/demo/src/main/resources/templates/task-edit.html
+++ b/demo/src/main/resources/templates/task-edit.html
@@ -12,9 +12,11 @@
     <div th:each="el : ${task}">
     <form th:action="'/task/' + ${el.id} + '/edit'"  method="post">
 
-            <input type="text" th:value="${el.title}" name="title" placeholder="Put new Task Title" class="form-control"><br>
-            <input type="text" th:value="${el.type}" name="type" placeholder="Put new Task Type" class="form-control"><br>
-            <textarea th:text="${el.description}" name="description" placeholder="Put new Description" class="form-control" /><br>
+            <input type="text" th:value="${el.title}" name="title" placeholder="${el.title}" class="form-control"><br>
+            <input type="text" th:value="${el.project}" name="project" placeholder="${el.project}" class="form-control"><br>
+            <input type="text" th:value="${el.type}" name="type" placeholder="${el.type}" class="form-control"><br>
+            <input type="number" th:value="${el.priority}" name="priority" placeholder="${el.priority}" class="form-control"><br>
+            <textarea th:text="${el.description}" name="description" placeholder="${el.description}" class="form-control" /><br>
 
             <button type="submit" class="btn btn-success">Save</button>
     </form>
