--- a/demo/src/main/resources/templates/blocks/header.html
+++ b/demo/src/main/resources/templates/blocks/header.html
@@ -5,7 +5,7 @@
             <a class="p-2 text-dark" href="/">Home</a>
             <a class="p-2 text-dark" href="/task">Tasks</a>
             <a class="p-2 text-dark" href="/task/add">Add New Task</a>
-            <a class="p-2 text-dark" href="/projects">Projects</a>
+            <a class="p-2 text-dark" href="/project/add">Projects</a>
             <a class="p-2 text-dark" href="/user">Users</a>
         </nav>
         <form th:action="@{/login}"  method="get">
