--- a/demo/src/main/resources/templates/home.html
+++ b/demo/src/main/resources/templates/home.html
@@ -11,11 +11,11 @@
 
     <section class="jumbotron text-center">
         <div class="container">
-            <h1>Album example</h1>
+            <h1>Bug Tracking System</h1>
             <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
             <p>
-                <a href="#" class="btn btn-primary my-2">Main call to action</a>
-                <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+                <a href="/project/add" class="btn btn-primary my-2">Add your Task</a>
+                <a href="/task" class="btn btn-secondary my-2">View other Tasks</a>
             </p>
         </div>
     </section>
