--- a/demo/src/main/resources/templates/project-add.html
+++ b/demo/src/main/resources/templates/project-add.html
@@ -8,7 +8,7 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container mt-5 mb-5">
-    <h1>Add a new Project</h1>
+    <h1>Add a new Project and Task</h1>
     <form th:action="@{/project/add}" method="post">
         <input type="text" name="title" placeholder="Title of Task" class="form-control"><br>
 
