--- a/demo/src/main/resources/templates/task-main.html
+++ b/demo/src/main/resources/templates/task-main.html
@@ -8,7 +8,7 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container mt-5">
-    <h1>Task</h1>
+    <h1>Tasks</h1>
     <div th:each="el : ${task}" class="alert alert-info mt-2">
         <h3 th:text="${el.title}"/>
         <strong>Type</strong><p th:text="${el.type}"/>
