--- a/demo/src/main/resources/templates/blocks/header.html
+++ b/demo/src/main/resources/templates/blocks/header.html
@@ -4,7 +4,7 @@
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-dark" href="/">Home</a>
             <a class="p-2 text-dark" href="/task">Tasks</a>
-
+            <a class="p-2 text-dark" href="/projects">Projects</a>
             <a class="p-2 text-dark" href="/project/add">Add New Task</a>
             <a class="p-2 text-dark" href="/user">Users</a>
         </nav>
