--- a/demo/src/main/resources/templates/projects.html
+++ b/demo/src/main/resources/templates/projects.html
@@ -8,7 +8,11 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container mt-5">
-    <h1 th:text="${title}"/>
+    <h1>Projects</h1>
+    <div th:each="el : ${project}" class="alert alert-info mt-2">
+        <h3 th:text="${el.project_name}"/>
+
+    </div>
 </div>
 <div th:insert="blocks/footer :: footer"></div>
 </body>
