--- a/demo/src/main/resources/templates/project-details.html
+++ b/demo/src/main/resources/templates/project-details.html
@@ -1,18 +1,20 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:text="${title}"/>
+    <title th:text="${task}"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container mt-5">
-    <h1>Projects</h1>
+    <h1>Task Details</h1>
     <div th:each="el : ${project}" class="alert alert-info mt-2">
         <h3 th:text="${el.project_name}"/>
-        <a th:href="'/project/' + ${el.id}">Details</a>
 
+        <form th:action="'/project/' + ${el.id} + '/remove'" method="post">
+            <button type="submit" class="btn btn-warning">Delete</button>
+        </form>
     </div>
 </div>
 <div th:insert="blocks/footer :: footer"></div>
