--- a/demo/src/main/resources/templates/home.html
+++ b/demo/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
             <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
             <p>
                 <a href="/project/add" class="btn btn-primary my-2">Add your Task</a>
-                <a href="/task" class="btn btn-secondary my-2">View other Tasks</a>
+                <a href="/task" class="btn btn-secondary my-2">View all Tasks</a>
             </p>
         </div>
     </section>
