--- a/demo/src/main/resources/templates/project-details.html
+++ b/demo/src/main/resources/templates/project-details.html
@@ -8,9 +8,10 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container mt-5">
-    <h1>Task Details</h1>
+    <h1>Project Details</h1>
     <div th:each="el : ${project}" class="alert alert-info mt-2">
         <h3 th:text="${el.project_name}"/>
+
 
         <form th:action="'/project/' + ${el.id} + '/remove'" method="post">
             <button type="submit" class="btn btn-warning">Delete</button>
