--- a/demo/src/main/resources/templates/userEdit.html
+++ b/demo/src/main/resources/templates/userEdit.html
@@ -8,16 +8,21 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <main role="main">
+<div th:each="el : ${user}">
+    <form th:action="'/user/' + ${el.id} + '/edit'" method="post">
+        <input type="text" readonly class="form-control-plaintext" id="userID" th:value="'userID ' + ${el.id}"><br>
+        <input type="text" th:value="${el.username}" id="userName" name="userName" placeholder="${el.username}" class="form-control"><br>
+        <input type="text" th:value="${el.password}" id="userPassword" name="userPassword" placeholder="${el.password}" class="form-control"><br>
+        <select class="form-control" id="role" name="role" >
+            <option th:each="el : ${roles}"
+                    th:value="${el}"
+                    th:text="${el}">Wireframe</option>
+        </select>
 
-    <form action="/user" method="post">
-        <input type="text" name="username" value="${user.username}">
-
-    <input type="text" value="${user.id}" name="userId">
-    <input type="hidden" value="${_csrf.token}" name="csrf">
     <button type="submit">Save</button>
     </form>
     <a href="/">Back to Home</a>
-
+</div>
 </main>
 <div th:insert="blocks/footer :: footer"></div>
 </body>
