--- a/demo/src/main/resources/templates/userList.html
+++ b/demo/src/main/resources/templates/userList.html
@@ -14,6 +14,7 @@
         <tr>
             <th scope="col">id</th>
             <th scope="col">Username</th>
+            <th scope="col">User Role</th>
             <th scope="col">User Edit</th>
         </tr>
         </thead>
@@ -21,6 +22,7 @@
         <tr th:each="el : ${users}">
             <td th:text="${el.id}"/>
             <td th:text="${el.username}"/>
+            <td th:text="${el.roles}"/>
             <td><a th:href="'/user/' + ${el.id} + '/edit'" class="btn btn-warning">Edit User</a><br><br></td>
         </tr>
         </tbody>
