--- a/demo/src/main/resources/templates/home.html
+++ b/demo/src/main/resources/templates/home.html
@@ -12,10 +12,10 @@
     <section class="jumbotron text-center">
         <div class="container">
             <h1>Bug Tracking System</h1>
-            <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+            <p class="lead text-muted">For begin using Java Bug Tracking System create a new Project</p>
             <p>
-                <a href="/project/add" class="btn btn-primary my-2">Add your Task</a>
-                <a href="/task" class="btn btn-secondary my-2">View all Tasks</a>
+                <a href="/project/add" class="btn btn-primary my-2">new Project</a>
+                <a href="/task/add" class="btn btn-secondary my-2">Add your Task</a>
             </p>
         </div>
     </section>
