--- a/demo/src/main/resources/templates/userEdit.html
+++ b/demo/src/main/resources/templates/userEdit.html
@@ -20,11 +20,11 @@
         </select>
 
     <button type="submit" class="btn btn-warning">Save</button><br>
-    </form>
+    </form><br>
     <span></span>
     <form th:action="'/user/' + ${el.id} + '/delete'" method="post">
         <button type="submit" class="btn btn-warning">Delete User</button><br><br>
-    </form>
+    </form><br>
     <a href="/">Back to Home</a>
 </div>
 </main>
