--- a/demo/src/main/resources/templates/userList.html
+++ b/demo/src/main/resources/templates/userList.html
@@ -8,7 +8,8 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <main role="main">
-
+    <div class="container mt-5 mb-5">
+    <h1>Users</h1>
     <table class="table" align="center">
         <thead class="thead-dark" align="center">
         <tr>
@@ -27,6 +28,7 @@
         </tr>
         </tbody>
     </table>
+    </div>
 </main>
 <div th:insert="blocks/footer :: footer"></div>
 </body>
