--- a/demo/src/main/resources/templates/task-add.html
+++ b/demo/src/main/resources/templates/task-add.html
@@ -28,10 +28,13 @@
        <label for="validationCustom03">Project</label>
        <select class="form-control" id="validationCustom03" name="projectString"  >
            <option th:each="project : ${projects}"
-                   th:value="${project}"
+                   th:value="${project}" required
                    th:text="${project}">Wireframe
            </option>
        </select><br>
+       <div class="valid-feedback">
+           Looks good!
+       </div>
        <label for="validationCustom04">Type of Task</label>
        <input type="text" name="type" id="validationCustom04"  value="" required class="form-control"><br>
        <div class="valid-feedback">
