--- a/demo/src/main/resources/templates/task-details.html
+++ b/demo/src/main/resources/templates/task-details.html
@@ -8,17 +8,34 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container mt-5">
-    <h1>Task Details</h1>
+    <h1>Project Details</h1>
     <div th:each="el : ${task}" class="alert alert-info mt-2">
-        <h3 th:text="${el.title}"/>
-        <strong>Type of Task: </strong><a th:text="${el.type}"/><br>
+        <form th:action="'/task/' + ${el.id} + '/edit'" method="post">
+            <label for="validationCustom01">Title of Task</label>
+            <input type="text" name="title" class="form-control" id="validationCustom01" th:value="${el.title}" required><br>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+            <label >Project</label>
+            <input type="text" readonly th:value="${el.project}" class="form-control"><br>
+            <label for="validationCustom04">Type of Task</label>
+            <input type="text" name="type" id="validationCustom04"  th:value="${el.type}" required class="form-control"><br>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+            <label for="validationCustom05">Priority</label>
+            <input type="number" name="priority"  id="validationCustom05" th:value="${el.priority}" required class="form-control"><br>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+            <label for="validationCustom06">Description</label>
+            <textarea name="description" th:text="${el.description}" id="validationCustom06"  th:value="${el.description}" required class="form-control"></textarea><br>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
+            <button type="submit" class="btn btn-warning">Save</button>
+        </form><br>
 
-        <strong>Rriority of Task: </strong><a th:text="${el.priority}"/><br>
-        <strong>Author of Task: </strong><a th:text="${el.authorName}"/><br>
-        <strong>Description: </strong><textarea th:placeholder="${el.description}" class="form-control"></textarea><br>
-
-
-        <a th:href="'/task/' + ${el.id} + '/edit'" class="btn btn-warning">Edit Task</a><br><br>
         <form th:action="'/task/' + ${el.id} + '/remove'" method="post">
             <button type="submit" class="btn btn-warning">Delete</button>
         </form>
